# uni-db

./: .gitignore  AGENTS.md  API_REVISION.md  CODE_SIMPLIFIER_FEEDBACK.md  Cargo.toml  README.md  RELEASE_NOTES_2.2.1.md  blackbook_todo.md  llms.txt
bindings/uni-db/: Cargo.toml  README.md  REVIEW.md  pyproject.toml
bindings/uni-db-all/: Cargo.toml  README.md  pyproject.toml
bindings/uni-db-all-cuda/: Cargo.toml  README.md  pyproject.toml
bindings/uni-db-all-metal/: Cargo.toml  README.md  pyproject.toml
bindings/uni-db-cuda/: Cargo.toml  README.md  pyproject.toml
bindings/uni-db-fastembed/: Cargo.toml  README.md  pyproject.toml
bindings/uni-db-fastembed-cuda/: Cargo.toml  README.md  pyproject.toml
bindings/uni-db-metal/: Cargo.toml  README.md  pyproject.toml
bindings/uni-db-mistralrs/: Cargo.toml  README.md  pyproject.toml
bindings/uni-db-mistralrs-cuda/: Cargo.toml  README.md  pyproject.toml
bindings/uni-db-onnx/: Cargo.toml  README.md  pyproject.toml
bindings/uni-db-onnx-cuda/: Cargo.toml  README.md  pyproject.toml
bindings/uni-db-onnx-metal/: Cargo.toml  README.md  pyproject.toml
bindings/uni-db/examples/: fork_audit.py  fork_quickstart.py  forks.ipynb  forks_async.ipynb  fraud_detection.ipynb  generate_notebooks.py  rag.ipynb  recommendation.ipynb  run_notebooks.py  sales_analytics.ipynb  supply_chain.ipynb
bindings/uni-db/src/: async_api.rs  btic.rs  builders.rs  classifier.rs  convert.rs  core.rs  exceptions.rs  lib.rs  sparse.rs  sync_api.rs  types.rs
bindings/uni-db/tests/: conftest.py  test_advanced.py  test_async_basic.py  test_async_builder.py  test_async_bulk.py  test_async_cancel.py  test_async_cypher_features.py  test_async_e2e_admin.py  test_async_e2e_bulk.py  test_async_e2e_crud.py  test_async_e2e_errors.py  test_async_e2e_indexes.py  test_async_e2e_locy.py  test_async_e2e_persistence.py  test_async_e2e_queries.py  test_async_e2e_schema.py  test_async_e2e_sessions.py  test_async_e2e_sparse.py  test_async_e2e_transactions.py  test_async_e2e_vector.py  test_async_fork.py  test_async_fork_diff_promote.py  test_async_graph_types.py  test_async_python_plugin.py  test_async_schema_builder.py  test_async_sessions.py  test_async_transactions.py  test_async_vector.py  test_basic.py  test_btic.py  test_bug_adr_real_ingest_repro.py  test_bug_bulk_edge_create_repro.py  test_bug_sync_heterogeneous_ingest_repro.py  test_builder.py  test_bulk_writer.py  test_cypher_features.py  test_e2e_admin.py  test_e2e_bulk.py  test_e2e_crud.py  test_e2e_errors.py  (+34 more)
bindings/uni-db/uni_db/: __init__.py  __init__.pyi  __main__.py  _probe.py  _retry.py  _variant.py
bindings/uni-pydantic/: DESIGN.md  README.md  pyproject.toml
bindings/uni-pydantic/examples/: fraud_detection.ipynb  generate_notebooks.py  rag.ipynb  recommendation.ipynb  sales_analytics.ipynb  supply_chain.ipynb
bindings/uni-pydantic/tests/: conftest.py  test_async_queries.py  test_async_session.py  test_btic_integration.py  test_integration.py  test_models.py  test_queries.py  test_relationships.py  test_schema_sync.py  test_types.py
crates/uni-algo/: Cargo.toml
crates/uni-algo/src/: lib.rs  projection_input.rs
crates/uni-algo/tests/: algo_correctness_repros.rs
crates/uni-bulk/: Cargo.toml
crates/uni-bulk/src/: appender.rs  bulk.rs  flush_intent.rs  lib.rs
crates/uni-cli/: Cargo.toml
crates/uni-cli/src/: main.rs  repl.rs
crates/uni-cli/tests/: repro_progress_no_flush.rs  repro_query_exit_code.rs  repro_semantic_scholar_label.rs
crates/uni-common/: Cargo.toml
crates/uni-common/src/: config.rs  cypher_value_codec.rs  lib.rs  muvera.rs  value.rs  vector_index_opts.rs
crates/uni-common/tests/: repro_rename_property_bypass.rs  repro_temporal_date_display_panic.rs  repro_value_eq_nan_not_reflexive.rs
crates/uni-crdt/: Cargo.toml
crates/uni-crdt/src/: gcounter.rs  gset.rs  lib.rs  lww_map.rs  lww_register.rs  orset.rs  registry_dispatch.rs  rga.rs  vc_register.rs  vector_clock.rs
crates/uni-crdt/tests/: bugs_repro.rs  integration.rs  registry_dispatch.rs
crates/uni-cypher/: Cargo.toml
crates/uni-cypher/examples/: tck_extractor.rs
crates/uni-cypher/src/: ast.rs  lib.rs  locy_ast.rs  plugin_aggregates.rs
crates/uni-cypher/tests/: ALL_TCK_QUERIES.md  INVALID_TCK_QUERIES.md  VALID_TCK_QUERIES.md  integration.rs  parse_depth_limit.rs  parser_backtracking_regression.rs  path_quantifier_range.rs  repro_locy_derive_backtick_label.rs  repro_map_key_not_unescaped.rs  repro_nesting_guard_end_evasion.rs  repro_parse_expression_trailing_garbage.rs  repro_remove_label_backtick.rs  tck_test_suite.rs
crates/uni-fork/: Cargo.toml
crates/uni-fork/src/: diff.rs  host.rs  lib.rs  maintenance.rs  types.rs
crates/uni-locy/: Cargo.toml
crates/uni-locy-oracle/: Cargo.toml  README.md
crates/uni-locy-tck/: Cargo.toml
crates/uni-locy/src/: lib.rs  (+9 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: btic_decode.rs  cypher_parse.rs  locy_parse.rs  wal_decode.rs
fuzz/seeds/: README.md
website/: README.md  mkdocs.validate.52TS.yml  mkdocs.yml  pyproject.toml
website/docs/: index.md  why-uni.md
website/scripts/: convert_notebooks.py  generate_adverse_drug_reaction_flagship_notebook.py  generate_cyber_flagship_notebook.py  generate_drug_drug_interaction_flagship_notebook.py  generate_locy_notebooks.py  generate_pharma_flagship_notebook.py  generate_predictive_maintenance_flagship_notebook.py  generate_rust_neural_companion_notebooks.py  generate_semiconductor_flagship_notebook.py  prepare_adverse_drug_reaction_notebook_data.py  prepare_cyber_exposure_twin_data.py  prepare_drug_drug_interaction_notebook_data.py  prepare_drug_repurposing_data.py  prepare_patent_fto_data.py  prepare_pharma_batch_genealogy_data.py  prepare_predictive_maintenance_notebook_data.py  prepare_regulatory_impact_data.py  prepare_semiconductor_notebook_data.py  verify_adverse_drug_reaction_flagship_notebook.py  verify_cyber_flagship_notebook.py  verify_drug_drug_interaction_flagship_notebook.py  verify_pharma_flagship_notebook.py  verify_predictive_maintenance_flagship_notebook.py  verify_semiconductor_flagship_notebook.py
(+2228 files in other folders)
