[workspace]
members = [
    "crates/uni-common",
    "crates/uni-store",
    "crates/uni-algo",
    "crates/uni-query",
    "crates/uni-cli",
    "crates/uni",
    "crates/uni-crdt",
    "bindings/uni-db",
    "crates/uni-cypher",
    "crates/uni-tck",
    "crates/uni-locy-tck",
    "crates/uni-locy",
]
# Exclude uni-tck from default builds - run on-demand only
default-members = [
    "crates/uni-common",
    "crates/uni-store",
    "crates/uni-algo",
    "crates/uni-query",
    "crates/uni-cli",
    "crates/uni",
    "crates/uni-crdt",
    "bindings/uni-db",
    "crates/uni-cypher",
    "crates/uni-locy",
]
resolver = "2"

[workspace.package]
version = "0.1.18"
edition = "2024"
authors = ["Dragonscale Industries Inc. <dev@dragonscale.ai>"]
license = "Apache-2.0"
repository = "https://github.com/rustic-ai/uni-db"
homepage = "https://www.rustic.ai"
documentation = "https://rustic-ai.github.io/uni-db"
keywords = ["graph", "database", "cypher", "vector", "embedded"]
categories = ["database", "data-structures"]

[workspace.dependencies]
uni-common = { path = "crates/uni-common", version = "0.1.18" }
uni-store = { path = "crates/uni-store", version = "0.1.18" }
uni-algo = { path = "crates/uni-algo", version = "0.1.18" }
uni-query = { path = "crates/uni-query", version = "0.1.18" }
uni-cli = { path = "crates/uni-cli", version = "0.1.18" }
uni-db = { path = "crates/uni", version = "0.1.18" }
uni-crdt = { path = "crates/uni-crdt", version = "0.1.18" }
uni-cypher = { path = "crates/uni-cypher", version = "0.1.18" }
uni-locy = { path = "crates/uni-locy", version = "0.1.18" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
arrow = { version = "56.2.0", features = ["prettyprint"] }
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
arrow-row = "56.2.0"
lance = { version = "1.0.1", default-features = false, features = ["aws", "azure", "gcp"] }
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
object_store = { version = "0.11", features = ["aws", "gcp", "azure"] }
tempfile = "3.10"
uuid = { version = "1.8", features = ["v4"] }
chrono = "0.4.43"
chrono-tz = "0.10"
fxhash = "0.2"
bytes = "1.6"
parking_lot = "0.12"
rand = "0.8"
ordered-float = "4.2"
rayon = "1.10"
csv = "1.3"
parquet = "56.2.0"
regex = "1.10"
metrics = "0.22"
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
rustyline = "13.0"
colored = "2.1"
prettytable-rs = "0.10"
criterion = "0.5"
url = "2.5"
proptest = "1.4"
datafusion = "50.3.0"
lancedb = { version = "0.23.1", default-features = false, features = ["aws", "gcs", "azure"] }
uni-xervo = { version = "0.2.0", default-features = false }
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
fastembed = "5.11.0"
hf-hub = "0.4.3"
tokenizers = "0.22.2"
