[workspace]
members = [
    "crates/uni-common",
    "crates/uni-btic",
    "crates/uni-store",
    "crates/uni-algo",
    "crates/uni-query",
    "crates/uni-query-functions",
    "crates/uni-cli",
    "crates/uni",
    "crates/uni-crdt",
    "bindings/uni-db",
    # Wheel-matrix sibling crates — share `bindings/uni-db/src/lib.rs` via
    # `[lib].path`; differ only in the cargo features they activate. The
    # 6-wheel matrix mirrors uni-xervo 0.9.0's three-axis model
    # (provider × linking × acceleration). See
    # `docs/migrations/0.9.0-wheel-matrix-collapse.md` for the design.
    "bindings/uni-db-onnx",
    "bindings/uni-db-cuda",
    "bindings/uni-db-metal",
    "bindings/uni-db-onnx-cuda",
    "bindings/uni-db-onnx-metal",
    "crates/uni-cypher",
    "crates/uni-tck",
    "crates/uni-locy-tck",
    "crates/uni-locy",
    "crates/uni-plugin",
    "crates/uni-plugin-builtin",
    "crates/uni-plugin-apoc-core",
    "crates/uni-plugin-wasm",
    "crates/uni-plugin-wasm-rt",
    "crates/uni-plugin-extism",
    "crates/uni-plugin-rhai",
    "crates/uni-plugin-pyo3",
    "crates/uni-plugin-custom",
    "crates/uni-plugin-conformance",
    "crates/uni-plugin-host",
    "crates/uni-sidecar",
    "crates/uni-bulk",
    "crates/uni-fork",
]
# Exclude uni-tck from default builds - run on-demand only
default-members = [
    "crates/uni-common",
    "crates/uni-btic",
    "crates/uni-store",
    "crates/uni-algo",
    "crates/uni-query",
    "crates/uni-query-functions",
    "crates/uni-cli",
    "crates/uni",
    "crates/uni-crdt",
    "bindings/uni-db",
    "crates/uni-cypher",
    "crates/uni-locy",
    "crates/uni-plugin",
    "crates/uni-plugin-builtin",
    "crates/uni-plugin-apoc-core",
    "crates/uni-plugin-wasm",
    "crates/uni-plugin-wasm-rt",
    "crates/uni-plugin-extism",
    "crates/uni-plugin-rhai",
    "crates/uni-plugin-pyo3",
    "crates/uni-plugin-custom",
    "crates/uni-plugin-conformance",
    "crates/uni-plugin-host",
    "crates/uni-sidecar",
    "crates/uni-bulk",
    "crates/uni-fork",
]
resolver = "2"

[workspace.package]
version = "2.2.1"
edition = "2024"
authors = ["Dragonscale Industries Inc. <dev@dragonscale.ai>"]
license = "Apache-2.0"
repository = "https://github.com/rustic-ai/uni-db"
homepage = "https://www.rustic.ai"
documentation = "https://rustic-ai.github.io/uni-db"
keywords = ["graph", "database", "cypher", "vector", "embedded"]
categories = ["database", "data-structures"]

[workspace.dependencies]
uni-common = { path = "crates/uni-common", version = "2.0.0" }
uni-store = { path = "crates/uni-store", version = "2.0.0" }
uni-algo = { path = "crates/uni-algo", version = "2.0.0" }
uni-query = { path = "crates/uni-query", version = "2.0.0" }
uni-query-functions = { path = "crates/uni-query-functions", version = "2.0.0" }
uni-cli = { path = "crates/uni-cli", version = "2.0.0" }
uni-db = { path = "crates/uni", version = "2.0.0", default-features = false }
uni-crdt = { path = "crates/uni-crdt", version = "2.0.0" }
uni-cypher = { path = "crates/uni-cypher", version = "2.0.0" }
uni-locy = { path = "crates/uni-locy", version = "2.0.0" }
uni-btic = { path = "crates/uni-btic", version = "2.0.0" }
uni-plugin = { path = "crates/uni-plugin", version = "2.0.0" }
uni-plugin-builtin = { path = "crates/uni-plugin-builtin", version = "2.0.0" }
uni-plugin-apoc-core = { path = "crates/uni-plugin-apoc-core", version = "2.0.0" }
uni-plugin-wasm = { path = "crates/uni-plugin-wasm", version = "2.0.0" }
uni-plugin-wasm-rt = { path = "crates/uni-plugin-wasm-rt", version = "2.0.0" }
uni-plugin-extism = { path = "crates/uni-plugin-extism", version = "2.0.0" }
uni-plugin-rhai = { path = "crates/uni-plugin-rhai", version = "2.0.0" }
uni-plugin-pyo3 = { path = "crates/uni-plugin-pyo3", version = "2.0.0" }
uni-plugin-custom = { path = "crates/uni-plugin-custom", version = "2.0.0" }
uni-plugin-conformance = { path = "crates/uni-plugin-conformance", version = "2.0.0" }
uni-plugin-host = { path = "crates/uni-plugin-host", version = "2.0.0" }
uni-sidecar = { path = "crates/uni-sidecar", version = "2.0.0" }
uni-bulk = { path = "crates/uni-bulk", version = "2.0.0" }
uni-fork = { path = "crates/uni-fork", version = "2.0.0" }

# LOCK PIN (transitive, not listed here): `time` is held at =0.3.47 in
# Cargo.lock — time 0.3.48 adds `impl From<X> for <X as ModifierValue>::Type`
# impls that fail coherence (E0119) against aws-smithy-types 1.5.0's blanket
# `impl<T> From<T> for CanDisable<T>`. After any blanket `cargo update`, re-run
# `cargo update -p time --precise 0.3.47` until aws-smithy-types ships a fix.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "2"
arrow = { version = "58.3.0", features = ["prettyprint"] }
arrow-array = "58.3.0"
arrow-schema = "58.3.0"
arrow-row = "58.3.0"
lance = { version = "7.0.0", default-features = false, features = ["aws", "azure", "gcp"] }
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# OTel API + tracing bridge. These two are a tightly-coupled compatible pair
# (tracing-opentelemetry 0.33 ↔ opentelemetry 0.32); pin them together here so
# every crate shares one version and a bump happens in exactly one place.
opentelemetry = "0.32"
tracing-opentelemetry = "0.33"
arc-swap = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.6", features = ["derive"] }
object_store = { version = "0.13", features = ["aws", "gcp", "azure"] }
tempfile = "3.27"
uuid = { version = "1.23", features = ["v4", "serde"] }
semver = "1.0"
blake3 = "1"
cron = "0.16"
ulid = { version = "1.2", features = ["serde"] }
chrono = "0.4.45"
chrono-tz = "0.10"
fxhash = "0.2"
bytes = "1.11"
parking_lot = "0.12"
rand = "0.10"
ordered-float = "5"
rayon = "1.12"
csv = "1.4"
parquet = "58.3.0"
regex = "1.12"
metrics = "0.24"
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
rustyline = "18"
colored = "3"
prettytable-rs = "0.10"
criterion = "0.8"
url = "2.5"
proptest = "1.11"
datafusion = "53.1.0"
lancedb = { version = "=0.30.0", default-features = false, features = ["aws", "gcs", "azure"] }
uni-xervo = { version = ">=0.14.0, <1.0.0", default-features = false }
biodivine-lib-bdd = "0.6"
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
tokio-util = { version = "0.7", features = ["rt"] }
hf-hub = "0.5"
tokenizers = "0.23"
