[tool.poetry]
name = "uni-docs"
version = "1.0.1"
description = "Documentation site for Uni — Reasoning and Memory Infrastructure for Intelligent Systems"
authors = ["Dragonscale Industries Inc. <dev@dragonscale.ai>"]
readme = "README.md"
package-mode = false
homepage = "https://www.rustic.ai"
repository = "https://github.com/rustic-ai/uni-db"

[tool.poetry.dependencies]
python = "^3.10"
zensical = ">=0.0.31"
pymdown-extensions = "^10.0"
nbconvert = "^7.0"
uni-db = { path = "../bindings/uni-db", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "uni-pydantic @ file:///home/rohit/work/dragonscale/uni-lance-upgrade/bindings/uni-pydantic"
]
