[package]
name = "uni-python-cuda"
description = "Python bindings for Uni graph database (all providers + NVIDIA CUDA)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "_uni_db"
crate-type = ["cdylib"]
path = "../uni-db/src/lib.rs"

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
# Default-everything + NVIDIA acceleration. xervo 0.9.0's gpu-cuda includes
# provider-onnx + ort/cuda directly, and activates candle?/cuda and
# mistralrs?/cuda kernels for the local providers we list explicitly.
uni-db = { workspace = true, features = [
    "provider-candle",
    "provider-mistralrs",
    "gpu-cuda",
    "provider-openai",
    "provider-gemini",
    "provider-vertexai",
    "provider-mistral",
    "provider-anthropic",
    "provider-voyageai",
    "provider-cohere",
    "provider-azure-openai",
] }
uni-locy = { workspace = true }
uni-common = { workspace = true }
uni-store = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
