[package]
name = "uni-python-cuda"
description = "Python bindings for Uni graph database (all providers + NVIDIA CUDA)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "_uni_db"
crate-type = ["cdylib"]
path = "../uni-db/src/lib.rs"

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
# Default-everything (inherited from uni-db's default — all 11 providers
# CPU) plus NVIDIA acceleration. xervo 0.9.0's gpu-cuda activates ort/cuda
# directly and the candle?/cuda + mistralrs?/cuda kernels for the local
# providers already in the default.
uni-db = { workspace = true, default-features = true, features = ["gpu-cuda", "mimalloc"] }
uni-locy = { workspace = true }
uni-common = { workspace = true }
uni-store = { workspace = true }
uni-plugin = { workspace = true }
uni-plugin-rhai = { workspace = true }
uni-plugin-pyo3 = { workspace = true, features = ["pyo3"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
