[package]
name = "uni-python-fastembed"
description = "Python bindings for Uni graph database (fastembed + ONNX variant)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "_uni_db"
crate-type = ["cdylib"]
path = "../uni-db/src/lib.rs"

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
# provider-fastembed requires an ORT linking mode (uni-xervo build.rs since
# 0.6.1); provider-onnx supplies the static-CPU ORT for that.
uni-db = { workspace = true, features = ["provider-onnx", "provider-fastembed"] }
uni-locy = { workspace = true }
uni-common = { workspace = true }
uni-store = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
