[package]
name = "uni-python-metal"
description = "Python bindings for Uni graph database (all providers + Apple GPU/ANE)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "_uni_db"
crate-type = ["cdylib"]
path = "../uni-db/src/lib.rs"

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
# Default-everything (inherited from uni-db's default — all 11 providers
# CPU including provider-onnx) plus Apple acceleration. xervo 0.9.0's
# gpu-metal activates candle?/metal + mistralrs?/metal kernels for the
# local providers, and ort?/coreml so the ORT CoreML EP reaches Apple
# GPU/ANE. provider-onnx (in default) is what enables the optional ort
# crate that gpu-metal's `ort?/coreml` then activates.
uni-db = { workspace = true, default-features = true, features = ["gpu-metal", "mimalloc"] }
uni-locy = { workspace = true }
uni-common = { workspace = true }
uni-store = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
