[package]
name = "uni-python-metal"
description = "Python bindings for Uni graph database (all providers + Apple GPU/ANE)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "_uni_db"
crate-type = ["cdylib"]
path = "../uni-db/src/lib.rs"

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
# Default-everything (inherited from uni-db's default — all 11 providers
# CPU including provider-onnx) plus Apple acceleration. xervo 0.9.0's
# gpu-metal activates candle?/metal + mistralrs?/metal kernels for the
# local providers, and ort?/coreml so the ORT CoreML EP reaches Apple
# GPU/ANE. provider-onnx (in default) is what enables the optional ort
# crate that gpu-metal's `ort?/coreml` then activates.
# `pyo3-plugins` is opt-in (not in uni-db's default set) but the shared
# binding source calls the PyO3 plugin loaders unconditionally, so it must
# be enabled here. `rhai-plugins` already rides in via default-features.
uni-db = { workspace = true, default-features = true, features = ["gpu-metal", "mimalloc", "pyo3-plugins"] }
uni-locy = { workspace = true }
uni-common = { workspace = true }
uni-store = { workspace = true }
uni-plugin = { workspace = true }
uni-plugin-rhai = { workspace = true }
uni-plugin-pyo3 = { workspace = true, features = ["pyo3"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[features]
# This variant does not wire up the WASM/Extism plugin loaders (no
# wasmtime/extism deps). The shared `../uni-db/src/lib.rs` source still
# references these cfgs, so declare them as empty (off-by-default, no deps) to
# satisfy `unexpected_cfgs` under `-D warnings` — the gated methods compile out.
wasm-plugins = []
extism-plugins = []
