[package]
name = "uni-python-onnx-cuda"
description = "Python bindings for Uni graph database (ONNX + CUDA variant)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "_uni_db"
crate-type = ["cdylib"]
path = "../uni-db/src/lib.rs"

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
# gpu-cuda replaces provider-onnx (mutually exclusive per uni-xervo build.rs).
uni-db = { workspace = true, features = ["gpu-cuda"] }
uni-locy = { workspace = true }
uni-common = { workspace = true }
uni-store = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
