[package]
name = "uni-python-onnx-cuda"
description = "Python bindings for Uni graph database (ONNX + remote-API + CUDA variant; no candle/mistralrs)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "_uni_db"
crate-type = ["cdylib"]
path = "../uni-db/src/lib.rs"

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
# Slim variant + NVIDIA acceleration. Opts out of uni-db's
# default-everything to exclude candle and mistralrs. xervo 0.9.0's
# gpu-cuda already pulls in provider-onnx, ort/cuda, and the
# candle?/mistralrs?/cuda kernels for whichever local providers are
# enabled; here only the ORT CUDA EP fires.
uni-db = { workspace = true, default-features = false, features = [
    "lance-backend",
    "gpu-cuda",
    "provider-openai",
    "provider-gemini",
    "provider-vertexai",
    "provider-mistral",
    "provider-anthropic",
    "provider-voyageai",
    "provider-cohere",
    "provider-azure-openai",
] }
uni-locy = { workspace = true }
uni-common = { workspace = true }
uni-store = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
