[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "uni-db-onnx-cuda"
version = "1.4.0"
description = "Python bindings for Uni Graph Database (slim ONNX + remote APIs + NVIDIA CUDA)"
authors = [
    { name = "Dragonscale Industries Inc.", email = "dev@dragonscale.ai" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: GPU :: NVIDIA CUDA",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
]

[project.urls]
Homepage = "https://www.rustic.ai"
Documentation = "https://rustic-ai.github.io/uni-db"
Repository = "https://github.com/rustic-ai/uni-db"
Issues = "https://github.com/rustic-ai/uni-db/issues"

[tool.maturin]
module-name = "uni_db._uni_db"
