[package]
name = "uni-python-onnx-metal"
description = "Python bindings for Uni graph database (ONNX + CoreML variant)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "_uni_db"
crate-type = ["cdylib"]
path = "../uni-db/src/lib.rs"

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
# ORT on macOS accelerates via CoreML, not Metal directly. Static ORT (CPU)
# stays in via provider-onnx; gpu-coreml adds the CoreML EP.
uni-db = { workspace = true, features = ["provider-onnx", "gpu-coreml"] }
uni-locy = { workspace = true }
uni-common = { workspace = true }
uni-store = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
