[package]
name = "uni-python"
description = "Python bindings for Uni graph database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "_uni_db"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
uni-db = { workspace = true }
uni-locy = { workspace = true }
uni-common = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
